--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0",
+        "ext-libxml": "*",
+        "ext-soap": "*"
     },
     "autoload": {
         "psr-4": {
