--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bupy7/php-russianpost-tracking",
+    "name": "vertx/php-russianpost-tracking",
     "description": "PHP library of tracking mailing via API Russian Post.",
     "type": "library",
     "keywords": ["library","russian","post","pochta","tracking","php"],
@@ -7,18 +7,18 @@
     "version": "1.0.0",
     "authors": [
         {
-            "name": "Vasilij Belosludcev",
-            "email": "bupy765@gmail.com"
+            "name": "Rinat Khalekov",
+            "email": "rhalekov@gmail.com"
         }
     ],
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=5.3.0",
         "ext-soap": "*",
-        "bupy7/xml-constructor": "~1.2.0"
+        "psr/log": "~1.0"
     },
     "autoload": {
         "psr-4": {
-            "bupy7\\russianpost\\tracking\\": ""
+            "vertx\\russianpost\\tracking\\": "src"
         }
     }
 }
